--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="google-signin-client_id" content="426633935974-63tc30cbqp0elpodm40c7i4ouf7b3h90.apps.googleusercontent.com" />
+<meta name="google-signin-scope" content="profile email" />
 </head>
 
 <body>
