--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Tianguis</title>
+  <title>Tianguis App</title>
 
   <base href="/"/>
 
@@ -20,7 +20,7 @@
   <meta name="google-signin-client_id" content="426633935974-63tc30cbqp0elpodm40c7i4ouf7b3h90.apps.googleusercontent.com"/>
   <meta name="google-signin-scope" content="profile email"/>
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#6304cc">
 </head>
 
 <body>
